feat(auth): update proto
